force-app/main/default/objects/geopointe__Route__c/geopointe__Route__c.object-meta.xml
<CustomObject>
    <description>Instances of a Route used by the Geopointe application.  Routes can be saved or just held here temporarily.  The temporary ones will be periodically cleaned up.</description>
    <label>Geopointe Route</label>
    <nameField>
        <label>Route Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Routes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>