force-app/main/default/objects/geopointe__Route__c/fields/geopointe__Avoid_Highways__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Avoid_Highways__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Google Only</inlineHelpText>
    <label>Avoid Highways</label>
    <type>Checkbox</type>
</CustomField>