force-app/main/default/objects/geopointe__Route__c/fields/geopointe__Avoid_Tolls__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Avoid_Tolls__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>MapQuest Only</inlineHelpText>
    <label>Avoid Tolls</label>
    <type>Checkbox</type>
</CustomField>