force-app/main/default/objects/geopointe__Route__c/fields/geopointe__Calendar_Route__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Calendar_Route__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, this route was generated from the calendar. This field is maintained systematically and should not be manually changed.</inlineHelpText>
    <label>Calendar Route</label>
    <type>Checkbox</type>
</CustomField>