force-app/main/default/objects/geopointe__Route__c/fields/geopointe__Date__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Date__c</fullName>
    <inlineHelpText>The date this route is scheduled for.</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>