force-app/main/default/objects/geopointe__Route__c/fields/geopointe__Draggable__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Draggable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Draggable</label>
    <type>Checkbox</type>
</CustomField>