force-app/main/default/objects/geopointe__Route__c/fields/geopointe__Locations_2__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Locations_2__c</fullName>
    <label>Locations 2</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>