force-app/main/default/objects/geopointe__Route__c/fields/geopointe__Locations_3__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Locations_3__c</fullName>
    <label>Locations 3</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>