force-app/main/default/objects/geopointe__Route__c/fields/geopointe__Mapping_Provider__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Mapping_Provider__c</fullName>
    <label>Mapping Provider</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MapQuest</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>