force-app/main/default/objects/geopointe__Route__c/fields/geopointe__Number_of_Stops__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Number_of_Stops__c</fullName>
    <inlineHelpText>Includes start and end</inlineHelpText>
    <label>Number of Stops</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>