force-app/main/default/objects/geopointe__Route__c/fields/geopointe__Optimized__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Optimized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Optimized</label>
    <type>Checkbox</type>
</CustomField>