force-app/main/default/objects/geopointe__Route__c/fields/geopointe__Route_Plan__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Route_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route Plan</label>
    <referenceTo>geopointe__GP_Route_Plan__c</referenceTo>
    <relationshipName>GP_Routes</relationshipName>
    <type>Lookup</type>
</CustomField>