force-app/main/default/objects/geopointe__Route__c/fields/geopointe__Route_Stop_Optimization__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Route_Stop_Optimization__c</fullName>
    <label>Route Stop Optimization</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Distance</fullName>
                <default>true</default>
                <label>Distance</label>
            </value>
            <value>
                <fullName>Schedule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>