force-app/main/default/objects/geopointe__Route__c/fields/geopointe__Route_Type__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Route_Type__c</fullName>
    <label>Route Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>fastest</fullName>
                <default>true</default>
                <label>fastest</label>
            </value>
            <value>
                <fullName>shortest</fullName>
            </value>
            <value>
                <fullName>pedestrian</fullName>
            </value>
            <value>
                <fullName>multimodal</fullName>
            </value>
            <value>
                <fullName>bicycle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>