force-app/main/default/objects/geopointe__Route__c/fields/geopointe__Route_Window_End_Time__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Route_Window_End_Time__c</fullName>
    <label>Route Window End Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>