force-app/main/default/objects/geopointe__Route__c/fields/geopointe__Thumb_Maps__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Thumb_Maps__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>MapQuest only</inlineHelpText>
    <label>Thumb Maps</label>
    <type>Checkbox</type>
</CustomField>