force-app/main/default/objects/geopointe__Route__c/fields/geopointe__Total_Distance_mi__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Total_Distance_mi__c</fullName>
    <label>Total Distance (mi)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>