force-app/main/default/objects/geopointe__Route__c/fields/geopointe__Total_Time__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Total_Time__c</fullName>
    <label>Total Time (min)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>