force-app/main/default/objects/geopointe__Route__c/fields/geopointe__Units__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Units__c</fullName>
    <label>Units</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>m</fullName>
                <default>true</default>
                <label>m</label>
            </value>
            <value>
                <fullName>k</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>